update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: I-due-Desiderii_67850
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 67850-h/images/cover.jpg
 creator:
   author:
     agent_name: Farina, Salvatore
@@ -11,6 +14,8 @@ creator:
     - https://en.wikipedia.org/wiki/Salvatore_Farina
     - https://it.wikipedia.org/wiki/Salvatore_Farina
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/67850#I-due-Desiderii
 gutenberg_issued: '2022-04-16'
 identifiers:
   gutenberg: '67850'
